--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,32 +2,35 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main  # Change to 'master' if your main branch is called master
+    branches: [deploy-to-gh-pages]
 
 permissions:
-  contents: write
+  pages: write
+  id-token: write
+  content: read
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
+      - name: Checkout Source
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build the project
+          node-version: 20
+      - name: Install Dependencies
+        run: npm ci
+      - name: Build Project
         run: npm run build
-
-      - name: Deploy to GitHub Pages
-        run: npm run deploy
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload artifacts
+        uses: actions/upload-pages-artifact@v3
+        with:
+          name: "github-pages"
+          path: build
+      - name: Deploy to github page
+        uses: actions/deploy-pages@v4
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}
+          artifact_name: "github-pages"
