--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,9 @@ on:
     branches: [deploy-to-gh-pages]
 
 permissions:
+  contents: read
   pages: write
   id-token: write
-  content: read
 
 jobs:
   build-and-deploy:
