adding the YML file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "benvix",
   "private": true,
+  "homepage": "https://zfadel989.github.io/YahYa-/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
